feat: developing welcome page

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -9,7 +9,7 @@
 
         <script src="cyfs://static/cyfs_sdk/cyfs.js"></script>
 
-        <title>hello world demo</title>
+        <title>Greenomics</title>
     </head>
 
     <body>
